--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "dotenv": "^15.0.0",
     "express": "^4.17.2",
+    "express-rate-limit": "^6.2.0",
+    "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
     "mongoose-unique-validator": "^3.0.0",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "password-validator": "^5.2.1"
   }
 }
