--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express-rate-limit": "^6.2.0",
     "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
+    "maskdata": "^1.1.6",
     "mongoose": "^6.1.8",
     "mongoose-unique-validator": "^3.0.0",
     "multer": "^1.4.4",
